# inscriber

./: .gitignore  AGENTS.md  DESIGN.md  PLAN-bibtex-auto.md  PLAN-inscriber-v1.md  README.md  TODO.md  config.example.toml  pyproject.toml
.agents/skills/inscribe/: SKILL.md
.claude/skills/inscribe/: SKILL.md
.github/workflows/: ci.yml  release.yml
dev/: README.md  integration-test.md
dev/benchmarks/openreview-G4I23g5Ugh/: README.md  openreview-G4I23g5Ugh.appendix.md  openreview-G4I23g5Ugh.backmatter.md  openreview-G4I23g5Ugh.main.md  openreview-G4I23g5Ugh.verification-fixes.md
dev/docs/: M1A-FINDINGS.md  bibtex-probe-findings.md  build-9587-verification.md  e2e-quality-findings.md  equation-fidelity-findings.md  gundam-findings.md  integration-test.md  table-reconstruction-findings.md  upstream-watch.md
dev/notes/: 2026-06-09-m1a-findings.md  2026-06-10-bibtex-probe-findings.md  2026-06-10-build-9587-verification.md  2026-06-10-cropped-table-validation.md  2026-06-10-dsocr2-spike-findings.md  2026-06-10-e2e-quality-findings.md  2026-06-10-equation-fidelity-findings.md  2026-06-10-gundam-findings.md  2026-06-10-table-reconstruction-findings.md  2026-06-10-upstream-watch.md  2026-06-11-prerelease-review.md
dev/plans/: PLAN-bibtex-auto.md  PLAN-cropped-table-input.md  PLAN-inscriber-v1.md  PLAN-ocr-truncation-detection.md
dev/scripts/: _common.py  bibtex_probe_check.py  dsocr2_check.py  gundam_check.py  m1a_probe.py  m1a_spike.py  m1b_check.py  table_crop_check.py  verify_thinking_spike.py
docs/: M1A-FINDINGS.md  integration-test.md  table-reconstruction-findings.md
inscriber/: __init__.py  __main__.py  bundle.py  cache.py  cli.py  config.py  errors.py  logging.py  models.py  output.py  pipeline.py  serialize.py  setup.py
inscriber/bibtex/: __init__.py  arxiv.py  chain.py  local.py  probe.py  semantic_scholar.py
inscriber/input/: __init__.py  domain_handlers.py  resolver.py
inscriber/llama/: __init__.py  client.py  server.py
inscriber/ocr/: __init__.py  base.py  deepseek.py  glm.py  registry.py
inscriber/pdf/: __init__.py  crop.py  figures.py  rasterize.py
inscriber/postprocess/: __init__.py  inject.py  join.py  notice.py  prompt.py  splitter.py  stitch.py  tables.py
inscriber/vlm/: __init__.py  base.py  gemma.py  registry.py
scripts/: m1a_probe.py  m1a_spike.py  m1b_check.py
tests/: conftest.py  test_bibtex.py  test_bibtex_chain.py  test_bibtex_probe.py  test_bundle_roundtrip.py  test_cache.py  test_cli.py  test_config.py  test_crop.py  test_deepseek_parser.py  test_domain_handlers.py  test_inject.py  test_join.py  test_llama_server.py  test_logging.py  test_notice.py  test_ocr_truncation.py  test_output.py  test_pdf_embedded_figures.py  test_pipeline_mocked.py  test_prompt.py  test_rasterize.py  test_resolver.py  test_setup.py  test_splitter.py  test_stitch.py  test_tables.py  test_vlm_truncation.py
tests/fixtures/: bibtex_best_effort.txt  bibtex_mock.txt  calibration.json  deepseek_calibration_gundam2048_raw.txt  deepseek_calibration_raw.txt  deepseek_paper_p1_raw.txt  deepseek_paper_table_p27_raw.txt  make_calibration.py  make_sample_paper.py
