[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inscriber"
version = "0.1.0"
description = "Local-first CLI that converts academic PDFs into LLM-friendly text-only Markdown using llama.cpp (DeepSeek-OCR + Gemma 4)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Luigi Acerbi" }]
keywords = ["pdf", "ocr", "markdown", "llama.cpp", "llm", "deepseek-ocr"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup :: Markdown",
]

# Runtime deps (DESIGN §18.1) — no heavy ML libs; all inference via llama.cpp over HTTP.
dependencies = [
    "pymupdf>=1.24",
    "pillow>=10.0",
    "httpx>=0.27",
    "platformdirs>=4.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
rich = ["rich>=13.0"]
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
inscriber = "inscriber.cli:main"

[project.urls]
Homepage = "https://github.com/lacerbi/inscriber"
Source = "https://github.com/lacerbi/inscriber"

[tool.hatch.build.targets.wheel]
packages = ["inscriber"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]  # line length handled by formatter; long ported strings exempt

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
